# necrosis_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: banner.cpp  current.md  info.md  interactions.md  necrosis_prd.md  necrosis_tdd.md  noita_tech_paper.md  tdd_considerations.md
include/necrosis/: conditional.h  features.h
src/: main.cpp
src/cheat-system/: cheat.cpp  cheat.h
